--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -628,6 +627,7 @@ allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
+allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
 allow 193.189.100.204;
@@ -939,7 +939,6 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
@@ -947,6 +946,7 @@ allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
+allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.215.167;
 allow 217.12.221.131;
@@ -1586,6 +1586,7 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
+allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
@@ -1602,8 +1603,6 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
-allow 2a12:5940:144f::2;
-allow 2a12:5940:1733::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
@@ -1618,7 +1617,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.221.174.59;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1633,6 +1631,7 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.82.255.82;
 allow 38.242.254.131;
 allow 38.97.116.244;
 allow 45.12.3.80;
@@ -1726,7 +1725,6 @@ allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
 allow 5.181.80.107;
-allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.73.12;
@@ -1734,7 +1732,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1805,7 +1802,6 @@ allow 78.142.18.219;
 allow 79.102.204.248;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1854,9 +1850,9 @@ allow 89.147.110.200;
 allow 89.147.110.202;
 allow 89.147.110.214;
 allow 89.147.110.82;
+allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
-allow 89.208.106.13;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.153;
@@ -1873,7 +1869,6 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
-allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
