--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -216,6 +217,7 @@ allow 179.43.159.197;
 allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
+allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
@@ -629,7 +631,6 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.180.188.174;
-allow 194.195.120.132;
 allow 194.26.192.64;
 allow 194.26.192.77;
 allow 194.28.112.157;
@@ -793,7 +794,6 @@ allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.61.252.121;
-allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -966,7 +966,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -990,7 +989,6 @@ allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0d::f03c:94ff:fe42:512f;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
@@ -1323,6 +1321,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
@@ -1536,6 +1535,7 @@ allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
+allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
@@ -1579,7 +1579,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.203.7.164;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1647,7 +1646,6 @@ allow 45.80.158.27;
 allow 45.80.208.123;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
@@ -1719,6 +1717,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.209.230.57;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1747,6 +1746,7 @@ allow 72.167.47.69;
 allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
+allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.221.159.184;
 allow 77.221.159.189;
@@ -1765,7 +1765,6 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 79.26.168.170;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1782,6 +1781,8 @@ allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.68.49.227;
+allow 83.217.9.73;
+allow 83.26.9.159;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1895,6 +1896,7 @@ allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
+allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
 allow 96.66.15.152;
