--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,6 +7,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -216,6 +217,7 @@ deny 179.43.159.197;
 deny 179.43.159.198;
 deny 179.43.159.199;
 deny 179.43.159.200;
+deny 179.43.159.201;
 deny 179.43.159.78;
 deny 179.43.167.205;
 deny 179.43.182.232;
@@ -629,7 +631,6 @@ deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
 deny 194.180.188.174;
-deny 194.195.120.132;
 deny 194.26.192.64;
 deny 194.26.192.77;
 deny 194.28.112.157;
@@ -793,7 +794,6 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 202.182.99.129;
 deny 202.61.226.98;
 deny 202.61.252.121;
-deny 202.69.76.36;
 deny 204.137.14.104;
 deny 204.137.14.105;
 deny 204.137.14.106;
@@ -966,7 +966,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -990,7 +989,6 @@ deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -1323,6 +1321,7 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
+deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
@@ -1536,6 +1535,7 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
+deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
@@ -1579,7 +1579,6 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 34.203.7.164;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1647,7 +1646,6 @@ deny 45.80.158.27;
 deny 45.80.208.123;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.9.148.219;
 deny 45.9.150.103;
 deny 45.9.150.130;
 deny 45.92.1.74;
@@ -1719,6 +1717,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 54.209.230.57;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1747,6 +1746,7 @@ deny 72.167.47.69;
 deny 72.211.49.235;
 deny 74.207.248.172;
 deny 74.82.47.194;
+deny 77.105.146.42;
 deny 77.220.196.253;
 deny 77.221.159.184;
 deny 77.221.159.189;
@@ -1765,7 +1765,6 @@ deny 77.91.87.79;
 deny 78.142.18.219;
 deny 79.124.8.241;
 deny 79.137.198.213;
-deny 79.26.168.170;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
@@ -1782,6 +1781,8 @@ deny 82.221.131.5;
 deny 82.221.131.71;
 deny 82.221.139.190;
 deny 82.68.49.227;
+deny 83.217.9.73;
+deny 83.26.9.159;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
@@ -1895,6 +1896,7 @@ deny 95.143.193.125;
 deny 95.164.4.104;
 deny 95.164.46.204;
 deny 95.168.173.143;
+deny 95.211.210.103;
 deny 95.211.244.28;
 deny 96.27.198.133;
 deny 96.66.15.152;
