--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -70,7 +71,6 @@ allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
 allow 107.189.31.33;
-allow 107.189.3.249;
 allow 107.189.4.12;
 allow 107.189.4.158;
 allow 107.189.4.209;
@@ -115,6 +115,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -138,7 +139,6 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.73.11;
 allow 144.172.73.6;
-allow 144.2.101.81;
 allow 144.217.80.80;
 allow 144.24.197.112;
 allow 146.59.234.220;
@@ -155,6 +155,7 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.74.201;
 allow 162.247.74.206;
@@ -787,6 +788,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -936,7 +938,6 @@ allow 23.137.248.152;
 allow 23.137.248.69;
 allow 23.137.249.8;
 allow 23.137.250.34;
-allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
@@ -967,6 +968,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -990,6 +992,7 @@ allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0d::f03c:94ff:fe42:512f;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
@@ -997,7 +1000,6 @@ allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
-allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1065,7 +1067,6 @@ allow 2605:6400:30:f307:ba73:e934:5195:accd;
 allow 2605:6400:30:f307:c2bf:d371:75a9:31e6;
 allow 2605:6400:30:f307:ff42:3928:c777:8563;
 allow 2605:6400:30:f32b:7417:ea33:425b:9732;
-allow 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 allow 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
 allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
@@ -1693,6 +1694,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.3.89.139;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
@@ -1744,7 +1746,6 @@ allow 69.46.9.122;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
-allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1765,6 +1766,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 79.26.168.170;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
